# hfs

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  DEV_FLOW.md  README.md  STARTER_PROMPT.md  index.html  install.sh  mkdocs.yml  profile.env.example  pyproject.toml  rust-toolchain.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
comandi/: index.html
configurazione/: index.html
docker/: .env.example  docker-compose.kerb.yml  docker-compose.test.yml
docker/init/: load-fixtures.sh
docker/init/hadoop-config/: core-site.xml  hdfs-site.xml
docker/init/kerb/: krb5.conf  setup-principals.sh  wait-for-ipa.sh
docker/init/kerb-hadoop-config/: core-site.xml  hdfs-site.xml
docs/: comandi.md  configurazione.md  index.md  installazione.md  kerberos.md  profile.env.example  sviluppo.md
docs/en/: commands.md  configuration.md  development.md  index.md  installation.md  kerberos.md
en/: index.html
en/comandi/: index.html
en/commands/: index.html
en/configuration/: index.html
en/configurazione/: index.html
en/development/: index.html
en/installation/: index.html
en/installazione/: index.html
en/kerberos/: index.html
en/sviluppo/: index.html
hfs/: Cargo.toml
hfs-core/: Cargo.toml
hfs-core/src/: builder.rs  client.rs  config.rs  error.rs  lib.rs  rpc.rs  webhdfs.rs
hfs-schema/: Cargo.toml
hfs-schema/src/: avro.rs  hive.rs  lib.rs  orc.rs  parquet.rs  reader.rs  schema.rs
hfs/src/: main.rs
installazione/: index.html
kerberos/: index.html
scripts/: tbox-run.sh
search/: search_index.json
sviluppo/: index.html
