[package]
name = "hfs-schema"
version = "0.1.0"
edition = "2021"
description = "Schema inspection for Parquet, Avro, ORC — reads only footer/header, no data scan"
license = "Apache-2.0"

[dependencies]
hfs-core    = { path = "../hfs-core" }
parquet     = { workspace = true }
apache-avro = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }

# ORC — dipendenza opzionale, meno matura
orc-rust = { version = "0.3", optional = true }

# Hive Metastore Thrift client — opzionale
thrift = { version = "0.17", optional = true }

[features]
default = ["orc", "hive"]
orc     = ["dep:orc-rust"]
hive    = ["dep:thrift"]
