[package]
name = "hfs"
version = "0.1.1"
edition = "2021"
description = "HDFS CLI — inspect files, schema, blocks and cluster health without JVM"
license = "Apache-2.0"

[[bin]]
name = "hfs"
path = "src/main.rs"

[dependencies]
hfs-core   = { path = "../hfs-core" }
hfs-schema = { path = "../hfs-schema" }
clap       = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
comfy-table = { workspace = true }
indicatif  = { workspace = true }
